# dataset-core

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  README.zh-CN.md  changelog.md
.github/workflows/: clippy.yml  doc.yml  fmt.yml  test.yml
crates/dataset-core/: CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
crates/dataset-core/src/: error.rs  lib.rs  utils.rs
crates/dataset-core/tests/: dataset_test.rs  utils_test.rs
crates/dataset-ml/: CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
crates/dataset-ml/src/: abalone.rs  adult.rs  bank_marketing.rs  banknote_authentication.rs  boston_housing.rs  breast_cancer.rs  california_housing.rs  car_evaluation.rs  covtype.rs  diabetes.rs  digits.rs  heart_disease.rs  ionosphere.rs  iris.rs  kddcup99.rs  letter_recognition.rs  lib.rs  linnerud.rs  movie_review_polarity.rs  mushroom.rs  newsgroups20.rs  palmer_penguins.rs  preprocessing.rs  sentiment_sentences.rs  sms_spam.rs  spambase.rs  titanic.rs  traits.rs  wine_quality.rs  wine_recognition.rs  youtube_spam.rs
crates/dataset-ml/src/wine_quality/: red_wine_quality.rs  white_wine_quality.rs
crates/dataset-ml/tests/: dataset_abalone_test.rs  dataset_adult_test.rs  dataset_bank_marketing_test.rs  dataset_banknote_authentication_test.rs  dataset_boston_housing_test.rs  dataset_breast_cancer_test.rs  dataset_california_housing_test.rs  dataset_car_evaluation_test.rs  dataset_covtype_test.rs  dataset_diabetes_test.rs  dataset_digits_test.rs  dataset_heart_disease_test.rs  dataset_ionosphere_test.rs  dataset_iris_test.rs  dataset_kddcup99_test.rs  dataset_letter_recognition_test.rs  dataset_linnerud_test.rs  dataset_movie_review_polarity_test.rs  dataset_mushroom_test.rs  dataset_newsgroups20_test.rs  dataset_palmer_penguins_test.rs  dataset_red_wine_quality_test.rs  dataset_sentiment_sentences_test.rs  dataset_sms_spam_test.rs  dataset_spambase_test.rs  dataset_titanic_test.rs  dataset_white_wine_quality_test.rs  dataset_wine_recognition_test.rs  dataset_youtube_spam_test.rs  preprocessing_test.rs  traits_test.rs
crates/dataset-ml/tests/common/: mod.rs
src/: boston_housing.rs  datasets.rs  diabetes.rs  error.rs  iris.rs  lib.rs  raw_data.rs  titanic.rs  utils.rs  wine_quality.rs
src/datasets/: boston_housing.rs  diabetes.rs  iris.rs  titanic.rs  wine_quality.rs
src/datasets/wine_quality/: red_wine_quality.rs  white_wine_quality.rs
src/raw_data/: boston_housing_raw.rs  diabetes_raw.rs  iris_raw.rs  titanic_raw.rs  wine_quality_raw.rs
tests/: boston_housing_test.rs  dataset_boston_housing_test.rs  dataset_diabetes_test.rs  dataset_iris_test.rs  dataset_red_wine_quality_test.rs  dataset_titanic_test.rs  dataset_white_wine_quality_test.rs  diabetes_test.rs  iris_test.rs  red_wine_quality_test.rs  titanic_test.rs  utils_test.rs  white_wine_quality_test.rs  wine_quality_test.rs
