[workspace]
resolver = "3"
members = [
    "crates/dataset-core",
    "crates/dataset-ml",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
authors = ["SomeB1oody <stanyin64@gmail.com>"]
license = "MIT"
repository = "https://github.com/SomeB1oody/dataset-core"

[workspace.dependencies]
dataset-core = { version = "0.3.0", path = "crates/dataset-core" }

ndarray = "0.17.2"
ureq = "3.3.0"
zip = "8.6.0"
flate2 = "1.1.9"
tempfile = "3.27.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
